--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,27 @@
+# Dependencies
 node_modules/
+
+# Build output
 dist/
-*.log
+
+# Environment files
 .env
 .env.local
+.env*.local
+
+# Logs
+*.log
+npm-debug.log*
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Test coverage
+coverage/
