--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm run typecheck
 
       - name: Test
-        run: npm test -- --run
+        run: npm test -- --run --passWithNoTests
 
   commitlint:
     name: Lint Commits
