--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,9 @@ jobs:
     name: Publish to npm
     runs-on: ubuntu-latest
     needs: [release-please]
+    permissions:
+      contents: read
+      id-token: write  # Required for npm OIDC trusted publishing
     # Run either:
     # 1. When release-please creates a release (push event)
     # 2. When any release is published (release event) - handles manual releases
@@ -48,7 +51,7 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: "22"  # npm 11.5+ required for OIDC
           cache: "npm"
           registry-url: "https://registry.npmjs.org"
 
@@ -59,9 +62,8 @@ jobs:
         run: npm run build
 
       - name: Publish to npm
-        run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npm publish --access public
+        # No token needed - uses OIDC trusted publishing
 
       - name: Summary
         run: |
