--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,9 +49,9 @@ jobs:
         with:
           ref: ${{ github.event.release.tag_name || needs.release-please.outputs.tag_name }}
 
-      - uses: actions/setup-node@v4
+      - uses: actions/setup-node@v6
         with:
-          node-version: "22"  # npm 11.5+ required for OIDC
+          node-version: "22"
           cache: "npm"
           registry-url: "https://registry.npmjs.org"
 
@@ -62,8 +62,10 @@ jobs:
         run: npm run build
 
       - name: Publish to npm
-        run: npm publish --provenance --access public
-        # Uses OIDC trusted publishing with provenance attestation
+        run: |
+          # Clear NODE_AUTH_TOKEN to let OIDC handle auth
+          unset NODE_AUTH_TOKEN
+          npm publish --provenance --access public
 
       - name: Summary
         run: |
